Initialize base::FeatureList on Cronet init

BUG=624435

Review-Url: https://codereview.chromium.org/2110803002
Cr-Commit-Position: refs/heads/master@{#402856}

Former-commit-id: 3180f53c36b834e7571ac1e6938f5d29806dec8c